# education

./: .gitignore  README.md  pyproject.toml
first_project/: pyproject.toml
first_project/first_project/scripts/: say_hello.py
tests/: test.py
