[tool.poetry]
name = "for-tests"
version = "0.1.0"
description = ""
authors = ["Oleg <antoshinov@gmail.com>"]
readme = "README.md"
packages = [
  { include = "package" },
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
